<resources>
    <string name="app_name">Boise 4x4</string>
    <string name="submit_button">Submit</string>
    <string name="cart_heading">Wish List</string>
    <string name="default_cart_text">Your wish list is empty.</string>
    <string name="accessory_name">Item name</string>
    <string name="accessory_price">Price</string>
    <string name="accessory_description">Item description</string>
    <string name="accessory_part_number">Item number</string>
    <string name="total_price">Total price</string>
    <string name="remove_item_checkbox">Remove</string>
    <string name="dollar_sign">$</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove_from_cart_button">Remove last item from cart</string>
    <string name="next_button">Next</string>
    <string name="email_to">To:</string>
    <string name="email_subject">Subject:</string>
    <string name="email_message">Message:</string>
    <string name="manufacturer_name">Manufacturer name</string>
    <string name="send_to_email">Send List to Email</string>


    <string-array name="vehicleType">
        <item>Jeep</item>
        <item>Polaris</item>
    </string-array>
    <string-array name="model">
        <item>Wrangler</item>
        <item>Razor</item>
    </string-array>
    <string-array name="year">
        <item>2019</item>
        <item>2018</item>
    </string-array>

</resources>
