<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16sp"
        android:scrollbars="vertical">

        <ImageView
            android:id="@+id/image_view_accessory_image"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/text_view_accessory_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessory_name"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_view_specs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Specs" />

        <TextView
            android:id="@+id/text_view_accessory_part_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessory_part_number" />

        <TextView
            android:id="@+id/text_view_manufacturer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer_name" />

        <TextView
            android:id="@+id/text_view_manufacturer_part_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessory_part_number" />

        <TextView
            android:id="@+id/text_view_accessory_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessory_description" />

        <TextView
            android:id="@+id/text_view_vehicle_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/text_view_accessory_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessory_price"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/add_to_cart_icon"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/ic_add_shopping_cart" />


    </LinearLayout>


</android.support.v7.widget.CardView>