<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:backgroundTint="@color/cardview_dark_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">


        <TextView
            android:id="@+id/acc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessory_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/acc_part_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessory_part_number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="normal"
            android:layout_below="@id/acc_name"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/acc_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessory_description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="normal"
            android:layout_below="@id/acc_part_number"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/acc_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessory_price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_below="@id/acc_description"
            android:layout_marginLeft="20dp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>