<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendEmailActivity"
    android:padding="16sp">

    <TextView
        android:id="@+id/text_view_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_to"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/edit_text_to"
        android:layout_below="@id/text_view_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/text_view_subject"
        android:layout_below="@+id/edit_text_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_subject"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/edit_text_subject"
        android:layout_below="@+id/text_view_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject" />

    <TextView
        android:id="@+id/text_view_message"
        android:layout_below="@+id/edit_text_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/emailRecyclerView"
        android:layout_below="@id/text_view_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"/>

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailRecyclerView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/next_button" />

</RelativeLayout>