<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp" >

    <LinearLayout
        android:id="@+id/email_card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/acc_name_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessory_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/acc_part_number_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/accessory_part_number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/acc_description_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/acc_price_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/accessory_price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp" />

    </LinearLayout>


</android.support.v7.widget.CardView>